--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://mazhuang.org
+url: https://linkoln.github.io/
 date_format: "ordinal"
 title: 面向AI编程的程序员
 subtitle: "公众号：= ="
